--- a/css/style.css
+++ b/css/style.css
@@ -83,9 +83,7 @@ hr:after {content: url(../images/dots.png);display: inline-block;position: relat
 .navbar-default .nav li a:hover,
 .navbar-default .nav li a:focus {outline: 0;color: #6ECADC;}
 
-.navbar-default .navbar-nav>.active>a {border-radius: 0;color: #fff;background-color: #6ECADC;}
-.navbar-default .navbar-nav>.active>a:hover,
-.navbar-default .navbar-nav>.active>a:focus {color: #fff;background-color: #6ECADC;}
+
 
 @media(min-width:768px) {
     .navbar-default {
@@ -113,7 +111,7 @@ hr:after {content: url(../images/dots.png);display: inline-block;position: relat
         font-size: 1.5em;
     }
 }
-header{text-align: center;color: #fff;background: url(../images/bg.jpg) no-repeat scroll center center ;-webkit-background-size: cover;-moz-background-size: cover;background-size: cover;-o-background-size: cover;height: 650px;}	
+header{text-align: center;color:#008866  ;background: url(../images/OR2..jpg) no-repeat scroll center center ;-webkit-background-size: cover;-moz-background-size: cover;background-size: cover;-o-background-size: cover;height: 650px;}	
 header img{display: block; margin: 200px auto  50px auto;}
 header .intro-text .intro-heading {text-transform: uppercase;font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;font-weight: 700;font-size: 50px;}
 header .intro-text .intro-lead-in {margin-bottom: 30px;font-family: 'Shadows Into Light', cursive;font-style: italic;font-size: 42px;}
@@ -141,7 +139,7 @@ header .intro-text .intro-lead-in {margin-bottom: 30px;font-family: 'Shadows Int
 .box-content .heading h2{font-size: 45px;letter-spacing:2px;}
 .box-content .heading .intro{margin-bottom: 75px;font-family: 'Shadows Into Light', cursive;font-size:22px;font-style: italic;}
 
-.box-content.box-style {background-attachment:fixed; background-image: url(../images/bg-1.jpg); background-color: #222;color:#fff;}
+.box-content.box-style {background-attachment:fixed; background-image: url(../images/OR6.jpg); background-color: #222;color:#fff;}
 
 /* ---------------------------------------------------------------------------- */
 /* ------------------------------Services(box-1)------------------------------- */
