--- a/css/style.css
+++ b/css/style.css
@@ -148,6 +148,7 @@ header .intro-text .intro-lead-in {margin-bottom: 30px;font-family: 'Shadows Int
 .box-content.box-1 h3 {margin-bottom:15px;font-size: 25px;}
 .box-content.box-1 .wrap-img{margin-bottom:40px;}
 .box-content.box-1 .box-item {}
+.box-content.box-1 .box-item1 {margin-left: 183px ;margin-top: 30px}
 
 /* ---------------------------------------------------------------------------- */
 /* --------------------------------New(box-2)---------------------------------- */
