--- a/css/style.css
+++ b/css/style.css
@@ -144,7 +144,7 @@ header .intro-text .intro-lead-in {margin-bottom: 30px;font-family: 'Shadows Int
 /* ---------------------------------------------------------------------------- */
 /* ------------------------------Services(box-1)------------------------------- */
 /* ---------------------------------------------------------------------------- */
-.box-content.box-1 {text-align: center;}
+.box-content.box-1 {text-align: center; border-bottom: #000000;border-bottom:solid }
 .box-content.box-1 h3 {margin-bottom:15px;font-size: 25px;}
 .box-content.box-1 .wrap-img{margin-bottom:40px;}
 .box-content.box-1 .box-item {}
@@ -280,11 +280,7 @@ header .intro-text .intro-lead-in {margin-bottom: 30px;font-family: 'Shadows Int
 .box-content.box-5 .box-item{margin: 5px; }
 .box-content.box-5 h3 {margin-bottom: 30px;font-size: 35px;}
 .box-content.box-5 p {margin-bottom: 20px;}
-.box-content.box-5 input {border: 1px solid #777;border-radius: 4px;-webkit-border-radius:4px;-moz-border-radius:4px;}
-.box-content.box-5 textarea {border: 1px solid #777;border-radius: 4px;-webkit-border-radius:4px;-moz-border-radius:4px;height: 240px;}
-
-.message{text-align: center;margin: 100px 0;}
-.message .wrap{	padding: 50px; background: #ffffff; border: 1px solid #333333;display: inline-block;border-radius: 5px;-webkit-border-radius: 5px;-moz-border-radius: 5px;-khtml-border-radius: 5px;}
+.box-content.box-5 .email{}
 
 /* ---------------------------------------------------------------------------- */
 /* -------------------------------------Footer--------------------------------- */
