--- a/css/style.css
+++ b/css/style.css
@@ -67,7 +67,7 @@ hr:after {content: url(../images/dots.png);display: inline-block;position: relat
 /* ---------------------------------Header+Nav--------------------------------- */
 /* ---------------------------------------------------------------------------- */
 .navbar-default {border-color: transparent;background-color: #222;}
-.navbar-default .navbar-brand {font-family: Helvetica,Arial,cursive;color: #6ECADC;}
+.navbar-default .navbar-brand {font-family: Helvetica,Arial,cursive;color: #ffffff;}
 .navbar-default .navbar-brand:hover,
 .navbar-default .navbar-brand:focus,
 .navbar-default .navbar-brand:active,
@@ -111,7 +111,7 @@ hr:after {content: url(../images/dots.png);display: inline-block;position: relat
         font-size: 1.5em;
     }
 }
-header{text-align: center;color:#008866  ;background: url(../images/OR2..jpg) no-repeat scroll center center ;-webkit-background-size: cover;-moz-background-size: cover;background-size: cover;-o-background-size: cover;height: 650px;}	
+header{text-align: center;color:#ffffff  ;background: url(../images/OR2..jpg) no-repeat scroll center center ;-webkit-background-size: cover;-moz-background-size: cover;background-size: cover;-o-background-size: cover;height: 650px;}	
 header img{display: block; margin: 200px auto  50px auto;}
 header .intro-text .intro-heading {text-transform: uppercase;font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;font-weight: 700;font-size: 50px;}
 header .intro-text .intro-lead-in {margin-bottom: 30px;font-family: 'Shadows Into Light', cursive;font-style: italic;font-size: 42px;}
