--- a/css/style.css
+++ b/css/style.css
@@ -111,10 +111,10 @@ hr:after {content: url(../images/dots.png);display: inline-block;position: relat
         font-size: 1.5em;
     }
 }
-header{text-align: center;color:#ffffff  ;background: url(../images/leaves.jpg) no-repeat scroll center center ;-webkit-background-size: cover;-moz-background-size: cover;background-size: cover;-o-background-size: cover;height: 650px;}	
+header{text-align: center;color:#ffffff  ;background: url(../images/leaves.jpg) no-repeat scroll center center ; background-attachment:fixed; -webkit-background-size: cover;-moz-background-size: cover;background-size: cover;-o-background-size: cover;height: 650px;}	
 header img{display: block; margin: 200px auto  50px auto;}
-header .intro-text .intro-heading {text-transform: uppercase;font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;font-weight: 700;font-size: 50px; color:#C53535}
-header .intro-text .intro-lead-in {margin-bottom: 30px;font-family: 'Shadows Into Light', cursive;font-style: italic;font-size: 42px; color:#C62037}
+header .intro-text .intro-heading {text-transform: uppercase;font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;font-weight: 700;font-size: 50px; color:white}
+header .intro-text .intro-lead-in {margin-bottom: 30px;font-family: 'Shadows Into Light', cursive;font-style: italic;font-size: 42px; color:white}
 @media(min-width:635px) {
     header .intro-text {
         padding-bottom: 80px;
@@ -139,7 +139,7 @@ header .intro-text .intro-lead-in {margin-bottom: 30px;font-family: 'Shadows Int
 .box-content .heading h2{font-size: 45px;letter-spacing:2px;}
 .box-content .heading .intro{margin-bottom: 75px;font-family: 'Shadows Into Light', cursive;font-size:22px;font-style: italic;}
 
-.box-content.box-style {background-attachment:fixed; background-image: url(../images/OR2.jpg); background-color: #222;color:#fff;}
+.box-content.box-style {background-attachment:fixed; background-repeat: no-repeat; background-image: url(../images/OR2.jpg) ; background-size: cover; background-position: center center; background-color: #222;color:#fff;}
 
 /* ---------------------------------------------------------------------------- */
 /* ------------------------------Services(box-1)------------------------------- */
